# Manga-dl

./: .gitignore  Dmanga.py  Pipfile  Pipfiledfa  READEME.md  README.md  dmanga.py  downloadmanga.py  main.py  manga-dl.py  pyproject.toml  requisitos.txt  test_Download.py  test_modulo_site.py  unionmangas.py
source/: __init__.py  download.py  gerenciadorDiretorios.py  manage.py  neoxscan.py  neoxscans.py  neoxscrans.html  unionleitor.py
tests/: test_download.py  test_manage.py
