[tool.poetry]
name = "manga-dl"
version = "0.1.0"
description = ""
authors = ["ZumbiPy <zumbipy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
requests = "^2.22.0"
tqdm = "^4.42.0"
pytest = "^5.3.5"
black = "^19.10b0"
pylint = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
